--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>2019UCO1678 - Vowel Counter</title>
-<link rel="stylesheet" href="q5(d).css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Vowel Counter App</h1>
@@ -29,6 +29,6 @@ COUNT</div>
 <div id="iCount" style="display: none;"></div>
 <div id="oCount" style="display: none;"></div>
 <div id="uCount" style="display: none;"></div>
-<script type="text/javascript" src="q5(d).js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
